editing and deleting stories, handlebar helpers

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,3 +7,20 @@ p{
     margin-top: 50px;
     text-align: center;
 }
+
+.fa-small{
+    font-size: 16px !important;
+}
+
+.btn-float{
+    float: left;
+    margin-right: 10px;
+}
+
+.btn-float-right{
+    float: right;
+}
+
+.img-small{
+    width: 180px;
+}
