--- a/views/stories/index.hbs
+++ b/views/stories/index.hbs
@@ -4,7 +4,7 @@
         <div class="col s12 m4">
             <div class="card">
                 <div class="card-image">
-                    {{!-- todo: editIcon--}}
+                    {{{editIcon user ../user _id}}}
                 </div>
                 <div class="card-content center-align">
                     <h5>{{title}}</h5>
@@ -12,7 +12,7 @@
                     <br>
                     <div class="chip">
                         <img src="{{user.image}}" alt="">
-                        <a href="/stories/user/{{user.id}}">{{user.displayName}}</a>
+                        <a href="/stories/user/{{user._id}}">{{user.displayName}}</a>
                     </div>
                 </div>
             </div>
